[package]
name = "anisette_merge_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rocket = { version = "0.5.1" , features = ["json"]}
url = { version = "2.5.4", features = ["serde"] }
serde_json = "1.0"
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
sha256 = "1.6.0"